--- a/BoxAndroidLibrary/.classpath
+++ b/BoxAndroidLibrary/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="lib" path="libs/httpmime-4.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/gson-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
