--- a/BoxAndroidLibrarySample/.classpath
+++ b/BoxAndroidLibrarySample/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="src" path="BoxAndroidLibrary_src"/>
 	<classpathentry kind="lib" path="libs/httpmime-4.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="src" path="BoxAndroidLibrary_src"/>
+	<classpathentry kind="lib" path="libs/gson-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
