Updated properties and classpath files for ADT 14.

--- a/BoxAndroidLibrarySample/.classpath
+++ b/BoxAndroidLibrarySample/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="src" path="BoxAndroidLibrary_src"/>
 	<classpathentry kind="lib" path="libs/gson-1.7.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
