--- a/BoxAndroidLibrary/pom.xml
+++ b/BoxAndroidLibrary/pom.xml
@@ -29,6 +29,12 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>gson-repackage</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.gson</groupId>
+					<artifactId>gson</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
