--- a/OneCloudAppToAppSample/AndroidManifest.xml
+++ b/OneCloudAppToAppSample/AndroidManifest.xml
@@ -4,10 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="9" />
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:targetSdkVersion="15" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/zip"
         android:label="@string/app_name" >
         <activity
             android:name=".Main"
@@ -18,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".ZipActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden" />
         
         <!-- Box OneCloud -->
         <receiver
