--- a/OneCloudAppToAppSample/project.properties
+++ b/OneCloudAppToAppSample/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-9
+target=Google Inc.:Google APIs:15
 android.library.reference.1=../OneCloudAppToApp
