--- a/BoxAndroidLibrary/build.gradle
+++ b/BoxAndroidLibrary/build.gradle
@@ -8,9 +8,65 @@ buildscript {
 }
 
 apply plugin: 'android-library'
+apply plugin: 'maven'
+
+group = 'com.box.android'
+archivesBaseName = 'sdk';
+version = '1.0.0'
 
 repositories {
 	mavenCentral()
+	maven { url releaseRepo }
+	maven { url snapshotRepo }
+}
+
+configurations {
+	archives {
+		extendsFrom configurations.default
+	}
+}
+
+uploadArchives {
+	configuration = configurations.archives
+	repositories.mavenDeployer {
+		repository(url: releaseRepo) {
+			authentication(userName: username,
+				password: password)
+		}
+		snapshotRepository(url: snapshotRepo) {
+			authentication(userName: username,
+				password: password)
+		}
+
+		pom.project {
+			name 'Box Android SDK v1'
+			packaging 'aar'
+			description 'Android SDK for Box v1'
+			url 'https://github.com/box/box-android-sdk'
+
+			scm {
+				url 'scm:git@github.com:box/box-android-sdk.git'
+				connection 'scm:git@github.com:box/box-android-sdk.git'
+				developerConnection 'scm:git@github.com:box/box-android-sdk.git'
+			}
+
+			licenses {
+				license {
+					name 'The Apache Software License, Version 2.0'
+					url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+					distribution 'repo'
+				}
+			}
+
+			developers {
+				developer {
+					id 'gcurtis'
+					name 'Greg Curtis'
+					email 'gcurtis@box.com'
+				}
+			}
+		}
+	}
 }
 
 dependencies {
@@ -28,9 +84,6 @@ android {
 			res.srcDirs = ['res']
 		}
 	}
-	buildToolsVersion "17.0"
-	compileSdkVersion 17
+	buildToolsVersion "18.0.1"
+	compileSdkVersion 18
 }
-
-group = 'com.box.androidlib'
-version = '1.0'
